Bug 80167 - FILESAVE: saving to RTF make it lose page breaks
Summary: FILESAVE: saving to RTF make it lose page breaks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta2
Hardware: Other All
: high major
Assignee: Miklos Vajna
URL:
Whiteboard: interoperability target:4.4.0 target:...
Keywords: filter:rtf
Depends on:
Blocks: Writer-Page-Break RTF-Paragraph
  Show dependency treegraph
 
Reported: 2014-06-17 22:05 UTC by Yousuf Philips (jay) (retired)
Modified: 2018-04-13 11:20 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
how the docx file looks when you open it LibO vs how the saved RTF looks (186.91 KB, image/png)
2014-06-17 22:05 UTC, Yousuf Philips (jay) (retired)
Details
test odt file (9.60 KB, application/vnd.oasis.opendocument.text)
2014-06-24 05:32 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-06-17 22:05:45 UTC
Created attachment 101274 [details]
how the docx file looks when you open it LibO vs how the saved RTF looks

When retesting < http://www.microsoft.com/investor/reports/ar13/docs/2013_Annual_Report.docx > from bug 77597 in 4.3 beta 2 and 4.4 alpha, i noticed that page breaks are being lost when saving to RTF. This didnt happen in 4.2.4 or 4.2.6.

Confirmed this is a filesave issue as Kingsoft Writer and LibO 4.2.4 opens it also without page breaks.
Comment 1 Yousuf Philips (jay) (retired) 2014-06-19 12:17:02 UTC
This is not limited to a particular DOCX files as i just tested it with a ODF file as well.
Comment 2 Kevin Suo 2014-06-24 05:30:52 UTC
I can confirm in Windows XP SP3, version 4.3.0.1.
I set status to NEW.

Also I can reproduce the page break loss with a simple odt file which has page break in it.
Comment 3 Kevin Suo 2014-06-24 05:32:36 UTC
Created attachment 101634 [details]
test odt file

Steps to reproduce:
1. Save the attached test odt file to rtf.

Current behaviour: Page break is lost.
Comment 4 Xisco Faulí 2014-06-27 12:30:10 UTC
Reproduced on latest daily build:

Version: 4.4.0.0.alpha0+
Build ID: 95272e7e5b7e38753ab07dbd6503b7cfa2974842
TinderBox: Win-x86@42, Branch:master, Time: 2014-06-26_23:01:43
OS: Win 8 Pro
Comment 5 Xisco Faulí 2014-06-27 12:50:05 UTC
This issue isn't a regression. It's reproduced in any step of the bibisect process. I change the status accordingtly. 

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect bad 8f4aeaad2f65d656328a451154142bb82efa4327
# bad: [369369915d3582924b3d01c9b01167268ed38f3b] source-hash-45295f3cdceb4c289553791071b5d7f4962d2ec4
git bisect bad 369369915d3582924b3d01c9b01167268ed38f3b
# bad: [351622aec2dff3cc3bbbb020ad0097c4322d2a21] source-hash-2c4537471c932b65e6f72e41881b505c4bbad12c
git bisect bad 351622aec2dff3cc3bbbb020ad0097c4322d2a21
# bad: [035c276ec5a8da669e6043a3db6b0701dd3c2ade] source-hash-dc8249af103741415a074d9bbf8b1211f24a7c3f
git bisect bad 035c276ec5a8da669e6043a3db6b0701dd3c2ade
# bad: [4225403645019b6af53db0bf9ba9bbd063e9aa93] source-hash-cf16ef6c250a2755155a02f24bad861b35a1f92b
git bisect bad 4225403645019b6af53db0bf9ba9bbd063e9aa93
# bad: [07e8171f32b03a1146ef80d086c2dd61f3def5aa] source-hash-886762160996dfa3fee07cf135e53dfe952ed298
git bisect bad 07e8171f32b03a1146ef80d086c2dd61f3def5aa
# bad: [a699fdbb511958b0a434a30174512791625d0c7d] source-hash-01f5362e7982cc1e5b8c9fa7216c892667971737
git bisect bad a699fdbb511958b0a434a30174512791625d0c7d
# bad: [e72f49855403b2dbe388fdeec8f297d4aaa95005] source-hash-d419bfc9f7e6114af7461fab17dc0782397e5433
git bisect bad e72f49855403b2dbe388fdeec8f297d4aaa95005
# first bad commit: [e72f49855403b2dbe388fdeec8f297d4aaa95005] source-hash-d419bfc9f7e6114af7461fab17dc0782397e5433
Comment 6 Yousuf Philips (jay) (retired) 2014-06-27 12:56:23 UTC
If 4.2.5 save page breaks and 4.3 doesnt, how is this not a regression.
Comment 7 Xisco Faulí 2014-06-27 13:08:20 UTC
Steps I followed:

1. Open 2013_Annual_Report.docx
2. Save it as 2013_Annual_Report.rtf
3. Close 2013_Annual_Report.docx
4. Open 2013_Annual_Report.rtf

In all the bibisect's steps I tested it, the first page break was missed after opening 2013_Annual_Report.rtf.

Could you please expecify whether you followed different steps? Could you please retested it in 4.2.5?
Comment 8 Miklos Vajna 2014-06-27 19:03:07 UTC
Regression from:

commit a31fbb53dba76736b37213b98b64937f05929a67
Author: Pallavi Jadhav <pallavi.jadhav@synerzip.com>
Date:   Thu Feb 6 13:58:03 2014 +0530
Comment 9 Michael Stahl 2014-06-27 19:07:59 UTC
regression from:

commit a31fbb53dba76736b37213b98b64937f05929a67
Author:     Pallavi Jadhav <pallavi.jadhav@synerzip.com>
AuthorDate: Thu Feb 6 13:58:03 2014 +0530
Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
CommitDate: Wed Feb 26 10:50:08 2014 +0100

    fdo#74566:DOCX: Preservation <w:br> tag for Break to Next Page
Comment 10 Michael Stahl 2014-06-27 19:08:46 UTC
oops, sorry for the duplication, it looks like i should have bisected a different bug :-/
Comment 11 Commit Notification 2014-06-27 20:35:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8100100298b877765e1781fb0eed285e82749ad1

fdo#80167 RTF export: don't loose page breaks



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Miklos Vajna 2014-06-27 20:51:51 UTC
-4-3 review: https://gerrit.libreoffice.org/9945
Comment 13 Yousuf Philips (jay) (retired) 2014-06-27 22:14:48 UTC
(In reply to comment #7)
> Steps I followed:
> 
> 1. Open 2013_Annual_Report.docx
> 2. Save it as 2013_Annual_Report.rtf
> 3. Close 2013_Annual_Report.docx
> 4. Open 2013_Annual_Report.rtf
> 
> In all the bibisect's steps I tested it, the first page break was missed
> after opening 2013_Annual_Report.rtf.
> 
> Could you please expecify whether you followed different steps? Could you
> please retested it in 4.2.5?

Yes i followed the same steps and before my last comment, i retested it again.

It is correct that the original docx file has a blank first page and then an image page, and exported rtf from all versions, the first page is the image page, but thats not the bug in question. This bug is for page breaks seen in the document after

Steven A. Ballmer 
Chief Executive Officer 
September 27, 2013

an example of which can be seen in the description attachment. I retested it with the latest 4.3 and its in there as well.
Comment 14 Miklos Vajna 2014-06-28 12:39:36 UTC
Yes, there will be a bugzilla notification here when the fix is in the libreoffice-4-3 branch, you can test a daily build afterward. :-)
Comment 15 Commit Notification 2014-06-30 10:28:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=124c2c3b015a7a9980dae67e1ca6844e66fa6258&h=libreoffice-4-3

fdo#80167 RTF export: don't loose page breaks


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Robinson Tryon (qubit) 2015-12-17 12:38:31 UTC Comment hidden (obsolete)