sw/source/filter/ww8/docxexport.hxx
@@ -124,6 +124,8 @@ public:
 
     virtual bool ignoreAttributeForStyles( sal_uInt16 nWhich ) const SAL_OVERRIDE;
 
+    virtual bool PreferPageBreakBefore() const SAL_OVERRIDE { return false; }
+
     /// Guess the script (asian/western).
     virtual bool CollapseScriptsforWordOk( sal_uInt16 nScript, sal_uInt16 nWhich ) SAL_OVERRIDE;
 
